[workspace]
package.version = "0.1.0"
package.readme = "README.md"
package.description = "yet another game engine"
package.authors = ["Thribhu K (tirbofish) <4tkbytes@pm.me>"]
package.edition = "2024"
package.license = "MIT or Apache-2.0"
package.repository = "https://github.com/tirbofish/lyrebird"

resolver = "3"

members = [
    "crates/*"
]

[workspace.dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11"
log = "0.4"
wgpu = "27.0"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt-multi-thread"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
parking_lot = "0.12"
pollster = "0.4"
gilrs = "0.11"
slint = {version = "1.14", features = ["unstable-wgpu-27", "backend-android-activity-06"]}
slint-build = "1.14"
walkdir = "2.5.0"
i-slint-backend-winit = "1.14"