[package]
name = "lyrebird-runner"
version.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lyrebird-runtime = { path = "../lyrebird-runtime" }
lyrebird-renderer = { path = "../lyrebird-renderer" }
tokio.workspace = true