[package]
name = "lyrebird-runtime"
version.workspace = true
readme.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lyrebird-renderer = { path = "../lyrebird-renderer" }

[features]
# only used for the editor, will make the binary bulkier. supposed to be used as a lib. 
debug = []
